ros2_workspace/log/build_2023-06-05_23-44-13/Position_Controller/stdout_stderr.log
running develop
running egg_info
writing ../../build/Position_Controller/Position_Controller.egg-info/PKG-INFO
writing dependency_links to ../../build/Position_Controller/Position_Controller.egg-info/dependency_links.txt
writing entry points to ../../build/Position_Controller/Position_Controller.egg-info/entry_points.txt
writing requirements to ../../build/Position_Controller/Position_Controller.egg-info/requires.txt
writing top-level names to ../../build/Position_Controller/Position_Controller.egg-info/top_level.txt
reading manifest file '../../build/Position_Controller/Position_Controller.egg-info/SOURCES.txt'
writing manifest file '../../build/Position_Controller/Position_Controller.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/juntj/Robitic_Project3/ros2_workspace/install/Position_Controller/lib/python3.10/site-packages/Position_Controller/PositionController.py to PositionController.cpython-310.pyc
  File "/home/juntj/Robitic_Project3/ros2_workspace/install/Position_Controller/lib/python3.10/site-packages/Position_Controller/PositionController.py", line 26
    self.subscription = self.create_subsciption(, , ,10)
                                                ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/juntj/Robitic_Project3/ros2_workspace/install/Position_Controller/lib/python3.10/site-packages/Position_Controller-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/Position_Controller/Position_Controller.egg-info to /home/juntj/Robitic_Project3/ros2_workspace/install/Position_Controller/lib/python3.10/site-packages/Position_Controller-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/juntj/Robitic_Project3/ros2_workspace/build/Position_Controller/install.log'
